@@ -1,5 +1,8 @@
 0.20.47	UNRELEASED
 
+ * Add -b argument to ``dulwich clone``.
+   (Jelmer Vernooĳ)
+
  * On Windows, provide a hint about developer mode
    when creating symlinks fails due to a permission
    error. (Jelmer Vernooĳ, #1005)
